...
                        points = "Points: ${user.score}"
                    )

                    Spacer(modifier = Modifier.size(50.dp))

                    OrangeButton(
                        text = "Go To Menu"
                    ) {
                        if(!isNavigating){
                            isNavigating = true
                            navController.navigateUp()
                        }
                    }
...
                        .size(width = 240.dp, height = 56.dp)
                        .shrinkOnPress{
                            onDismiss.invoke()
                        }
                ){
                    Text(
                        text = "Dismiss",
                        style = TextStyle(
                            fontSize = 24.sp,
                            fontFamily = FontFamily(Font(R.font.pally)),
                            fontWeight = FontWeight(700),
                            color = Color(0xFFFFFFFF),
                            textAlign = TextAlign.Center,
...
